--- a/TelegramBot/TelegramBot.csproj
+++ b/TelegramBot/TelegramBot.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Data\Bus.cs" />
     <Compile Include="Data\Directions.cs" />
     <Compile Include="Data\Driver.cs" />
+    <Compile Include="Data\Rides.cs" />
     <Compile Include="DirectionCart.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -91,6 +92,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RidesSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RidesSettings.Designer.cs">
+      <DependentUpon>RidesSettings.cs</DependentUpon>
+    </Compile>
     <Compile Include="Settings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -125,6 +132,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RidesSettings.resx">
+      <DependentUpon>RidesSettings.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Settings.resx">
       <DependentUpon>Settings.cs</DependentUpon>
     </EmbeddedResource>
